# quart-postgres-boilerplate

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  quart-postgres-boilerplate.code-workspace
.devcontainer/: devcontainer.json
.github/workflows/: backend-ci-cd.yml  my-app-ci-cd.yml
backend-service/: settings.toml
backend-service/my_app/: application.py
backend-service/tests/: conftest.py
counter_app/: application.py  wsgi.py
my-app/: pyproject.toml  settings.toml
my-app/my_app/: application.py  logger.py
my-app/my_app/counter_app/: views.py
my-app/my_app/home_app/: views.py
my-app/tests/: conftest.py
my-app/tests/counter/: test_counter.py
