[tool.poetry]
name = "counter-app"
version = "0.1.0"
description = "A Quart counter application"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "counter_app"}]

[tool.poetry.dependencies]
python = "^3.10"
quart = "0.18.4"
python-dotenv = "^1.0.0"
werkzeug = "2.3.7"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
